<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SD Digiclock</string>

    <string name="p_Title">DigiClock Settings</string>

    <string name="clock">Clock</string>
    <string name="date">Date</string>
    <string name="background">Background</string>
    <string name="font">Font</string>

    <string name="p_clock_title">Clock Settings</string>
    <string name="p_clock_color">Clock Text Color</string>
    <string name="p_clock_size">Clock Text Size</string>
    <string name="p_date_title">Date Settings</string>
    <string name="p_date_match_clock_color">Match Clock Color</string>
    <string name="p_date_color">Date Text Color</string>
    <string name="p_date_size">Date Text Size</string>
    <string name="p_date_format">Date Format</string>
    <string name="p_military">24 Hour Time</string>
    <string name="p_show_date">Show Date</string>
    <string name="p_show_ampm">Show AM/PM</string>
    <string name="p_choose_bg">Choose Background</string>
    <string name="p_bg_fill_title">Fill background</string>
    <string name="p_bg_fill_sum_on" translatable="false">The background will fill widget\'s cells</string>
    <string name="p_bg_fill_sum_off" translatable="false">The background will wrap the text</string>

    <string name="bgs_ok">OK</string>
    <string name="bgs_title">Choose Background</string>

    <string name="p_save">Save</string>
    <string name="p_cancel">Cancel</string>
    <string name="hello" translatable="false">hello</string>

    <string name="fontcustom">Custom</string>
    <string name="fontdefault">Default</string>
    <string name="chantilli_aqua" translatable="false">Chantilli</string>
    <string name="roboto" translatable="false">Roboto</string>
    <string name="robotofont" translatable="false">Roboto</string>
    <string name="droidsans" translatable="false">Droid Sans</string>
    <string name="droidserif" translatable="false">Droid Serif</string>

    <string name="bytes">256 Bytes</string>
    <string name="brushstroke" translatable="false">Brush Stroke</string>
    <string name="carbon">Carbon</string>
    <string name="dist_galaxy">Distant Galaxy</string>
    <string name="good_times">Good Times</string>
    <string name="jester">Jester</string>
    <string name="olde_english" translatable="false">Olde English</string>
    <string name="weezer" translatable="false">Weezer</string>
    <string name="custom_color">Custom Color</string>
    <string name="digital">Digital</string>


    <string name="p_date_format_close">Close</string>

    <string name="p_classic_mode">Classic</string>
    <string name="p_classic_mode_subtext">Classic mode allows for larger clock and date text.  Uses system font only and fewer background choices.</string>

    <string name="p_advanced_mode">Advanced</string>
    <string name="p_advanced_mode_subtext">Advanced mode allows different fonts and background options.  The clock and date text size will be limited.</string>


    <string-array name="date_formats">
        <item>Tue January 23, 2018</item>
        <item>Tue Jan 23, 2018</item>
        <item>Tue 1–23–2018</item>
        <item>Tue 1/23/2018</item>
        <item>Tuesday January 23, 2018</item>
        <item>Tuesday Jan 23, 2018</item>
        <item>Tuesday 1–23–2018</item>
        <item>Tuesday 1/23/2018</item>
        <item>January 23, 2018</item>
        <item>Jan 23, 2018</item>
        <item>1–23–2018</item>
        <item>1/23/2018</item>
        <item>1–23–18</item>
        <item>1/23/18</item>
        <item>January 23</item>
        <item>1–23</item>
        <item>1/23</item>
        <item>Tue January 23</item>
        <item>Tue Jan 23</item>
        <item>Tue 1–23</item>
        <item>Tue 1/23</item>
        <item>Tuesday Jan 23</item>
        <item>Tuesday 1/23</item>
        <item>Tue 23–1–2018</item>
        <item>Tue 23/1/2018</item>
        <item>Tuesday 23–1–2018</item>
        <item>Tuesday 23/1/2018</item>
        <item>23–1–2018</item>
        <item>23/1/2018</item>
        <item>23–1–18</item>
        <item>23/1/18</item>
        <item>23–1</item>
        <item>23/1</item>
        <item>Tue 23–1</item>
        <item>Tue 23/1</item>
        <item>Tuesday 23–13</item>
        <item>Tuesday 23/13</item>
        <item>Tue 1–23–18</item>
        <item>Tue 1/23/18</item>
        <item>Tuesday 1–23–18</item>
        <item>Tuesday 1/23/18</item>
        <item>Tue 23–1–18</item>
        <item>Tue 23/1/18</item>
        <item>Tuesday 23–1–18</item>
        <item>Tuesday 23/1/18</item>

    </string-array>
    <string name="title_activity_app_chooser" translatable="false">AppChooserActivity</string>
    <string name="choose_app_title">Select An Application</string>
    <string name="clock_click_app">Clock Click App</string>
    <string name="oversize">Text size is too large.  Reduce text size of clock or date.</string>
    <string name="p_mode">Mode</string>
    <string name="p_about">About</string>
    <string name="p_about_info">Created by Brian Kimmel SilentDesigns Copyright 2013 All rights reserved</string>
    <string name="p_select_mode">Select Mode</string>
    <string name="p_help">Help</string>
    <string name="p_help_button_1">(1) Settings Button.  Press to launch the settings for this widget</string>
    <string name="p_help_button_2">(2) Clock Click App Button.  Press to launch the app assigned to the clock button</string>
    <string name="p_help_button_3">(3) Refresh button.  Press to refresh the widget.  Useful after switching between portrait and landscape orientation</string>
</resources>