<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_gravity="center" android:background="@drawable/blackbg">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" android:layout_gravity="center">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_clock_size"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="25dp" />

        </LinearLayout>

        <SeekBar
            android:id="@+id/ClockSizeSB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50" android:paddingTop="20dp" android:paddingBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/ClockTextColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blackbg"
            android:drawablePadding="10dp"
            android:paddingLeft="30dp"
            android:text="@string/p_clock_color"
            android:textSize="25dp" />

        <Button
            android:id="@+id/ShowAMPM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blackbg"
            android:drawablePadding="10dp"
            android:paddingLeft="30dp"
            android:text="@string/p_show_ampm"
            android:textSize="25dp" android:drawableRight="@drawable/checkedbox"/>

        <Button
            android:id="@+id/btMilitary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blackbg"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/checkedbox"
            android:paddingLeft="30dp"
            android:text="@string/p_military"
            android:textSize="25dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_gravity="center">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center" android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blackbg"
                android:text="@string/p_cancel" android:padding="20sp" android:layout_gravity="left"/>

            <Button
                android:id="@+id/btSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/blackbg"
                android:text="@string/p_save" android:padding="20sp"/>
        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

</ScrollView>