<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/blackbg">

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p_date_size"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="25dp" />

            </LinearLayout>

        </LinearLayout>

    <SeekBar
        android:id="@+id/DateSizeSB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:progress="50" />



    <Button
        android:id="@+id/DateTextColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blackbg"
        android:drawablePadding="10dp"
        android:paddingLeft="30dp"
        android:text="@string/p_date_color"
        android:textSize="25dp" />


        <Button
            android:id="@+id/date_format"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:background="@drawable/blackbg"
            android:drawablePadding="10dp"
            android:paddingLeft="30dp"
            android:text="@string/p_date_format"
            android:textSize="25dp" />

        <Button
            android:id="@+id/ShowDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blackbg"
            android:drawablePadding="10dp"
            android:paddingLeft="30dp"
            android:text="@string/p_show_date"
            android:textSize="25dp"
            android:drawableRight="@drawable/checkedbox"/>


    </LinearLayout>
    
</ScrollView>